2004-03-24  Gautier Portet <kassoulet@gmail.com>

	* Gracefully handled gnome.vfs deprecation (#3649)

2004-03-24  Gautier Portet <kassoulet@gmail.com>

	* Making release version 0.7

2004-03-24  Gautier Portet <kassoulet@gmail.com>

	* soundconverter.glade: added a logo on the about box.
	
	* soundconverter.py: fixed about dialog showing only once (we need an 
	optimal method for handling dialogs).

2004-03-23  Gautier Portet <kassoulet@gmail.com>

	* soundconverter.py: added a dialog asking what to do when a file
	exists.  

2004-03-22  Gautier Portet <kassoulet@gmail.com>

	* soundconverter.glade: added an Add button on toolbar, added
	separators.

2004-03-17  Gautier Portet <kassoulet@gmail.com>

	* soundconverter.py: removed xing header generation when outputing mp3, 
	since it seems to break xmms mad decoder.
	
	* soundconverter.glade: changed the preference dialog, for a cleaner
	one.

2004-03-15  Gautier Portet <kassoulet@gmail.com>

	* added the quality settings for vorbis and mp3
	
	* soundconverter.py: some code cleanup.

2004-03-14  Gautier Portet <kassoulet@gmail.com>

	* soundconverter.py: changed deprecated import gnome.vfs to gnomevfs

2004-02-27  Gautier Portet <kassoulet@gmail.com>

	* Added basic mp3 support

2004-12-31  Lars Wirzenius  <liw@iki.fi>

	* Making release version 0.5.

2004-12-31  Lars Wirzenius  <liw@iki.fi>

	* COPYING: Added.
	
	* README: Added copyright and license information.

2004-12-31  Lars Wirzenius  <liw@iki.fi>

	* soundconverter.py: Make sure all the keys used for formatting
	target names exist in the dict used for input to the patterns.

2004-12-31  Lars Wirzenius  <liw@iki.fi>

	* soundconverter.1: Wrote.

2004-12-31  Lars Wirzenius  <liw@iki.fi>

	* soundconverter.py: Better way to stop a TagReader pipeline
	that doesn't cause Gstreamer runtime warnings. Also, allow
	selecting multiple files in the new filechooser for adding
	files.

2004-12-31  Lars Wirzenius  <liw@iki.fi>
